Edit, delete, like, and unlike work but unoptimized!

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,6 +16,8 @@
   --success-green: #42b883;
   --info-blue: #1e92f4;
   --loader-color: #7983ff;
+  --secondary-text: #818181;
+  --yellow-color: #facf5a;
 }
 
 body {
