Navbar is responsive now!

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,6 +10,7 @@
   --primary-text-color: #000;
   --secondary-text-color: #474747;
   --primary-purple: #6643b5;
+  --light-purple: #915bb0;
   --primary-blue: #0284c7;
   --primary-hover-blue: #2690c5;
   --danger-red: #f43f5e;
