--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,7 +10,7 @@
   --primary-text-color: #000;
   --secondary-text-color: #474747;
   --primary-purple: #6643b5;
-  --light-purple: #915bb0;
+  --light-purple: rgba(145, 91, 176, 0.8);
   --primary-blue: #0284c7;
   --primary-hover-blue: #2690c5;
   --danger-red: #f43f5e;
@@ -80,5 +80,11 @@ a {
 @media (min-width: 1200px) {
   .inputBody {
     width: 40%;
+  }
+}
+
+@media (max-width: 768px) {
+  .pageContainer {
+    width: 90%;
   }
 }
